# Customer_Segmentation_Project

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: Capstone 3: Project Ideas.gdoc  Capstone 3: Project Proposal.gdoc  index.md
notebooks/: Capstone_3_Data_Preprocessing_EDA.ipynb  Capstone_3_Modeling.ipynb
reports/figures/: Model Metrics - Customer Segmentation.csv
rfm_model_based_customer_segmentation/: __init__.py  dataset.py  features.py  plots.py
rfm_model_based_customer_segmentation/modeling/: predict.py  train.py
